# py-xl-sindy

./: .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml
batch_generation/: command_list.sh
docs/: conf.py  index.rst  xlsindy.base_catalog.rst  xlsindy.catalog_gen.rst  xlsindy.dynamics_modeling.rst  xlsindy.euler_lagrange.rst  xlsindy.optimization.rst  xlsindy.render.rst  xlsindy.rst  xlsindy.simulation.rst
example/: generate_trajectory.py  minimal_example.py  minimal_example_modular.py
exemples/: Jax_speedup_double_pendulum.py  Jax_test_new_function.py  Mujoco_align.py  Xl_Sindy_double_pendulum.py  Xl_Sindy_double_pendulum_Mujoco_test.py  Xl_Sindy_double_pendulum_comparison.py  Xl_Sindy_double_pendulum_example.py  Xl_Sindy_double_pendulum_validation_data.py  debug_formatting.py  jax_speedup_double_pendulum.py  jax_test_new_function.py  test_classical_expand.py  xl_Sindy_double_pendulum.py
research_work/: README.md
test/: expand_classical.py  numpy_generator.py  sindy_catalog_creator.py
util/: MUJOCO_LOG.TXT  README.md  align_data.py  batch_command_list.sh  batch_command_poster_3_light.sh  batch_command_poster_4_light_pc.sh  batch_file_execute.py  batch_launch.py  batch_plot.py  batch_plot_old.py  biparted_test.sh  command_list.sh  create_panda_database.py  create_validation_database.py  display_data.py  exploration_metric.py  generate_align_command.sh  generate_command.sh  implicit_solution_analysis.ipynb  method_comparison.py  method_ranking.py  metric_regression.py  model_comparison_2.py  mujoco_align.py  mujoco_align_generate_data.py  mujoco_generate_data.py  mujoco_ideal_comparison.py  mujoco_trajectories.py  mujoco_xlsind_verif_command.sh  (+11 more)
(+54 files in other folders)
