[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-xl-sindy"
requires-python = ">= 3.0"
version = "0.1.0"
description = "A library for Xl-Sindy simulations"
authors = [{ name = "Eymeric Chauchat", email = "eymeric.chauchat@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
"numpy>=2.1.3",
"scipy>=1.14.1",
"sympy>=1.13.3",
"scikit-learn>=1.5.2",
"matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",              # For running tests
    "sphinx",              # For documentation
    "black",               # Code formatting
    "flake8",              # Linting
    "matplotlib"           # Optional plotting for examples
]


[tool.setuptools.packages]
find = { where = ["xlsindy"] }
