[tool.poetry]
name = "py-xl-sindy"
version = "1.0.3"
description = "Library Xl-Sindy simulations"
authors = ["CHAUCHAT EYMERIC <chauchat.eymeric.r7@dc.tohoku.ac.jp>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "xlsindy"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
scipy = "^1.15.1"
sympy = "^1.13.3"
scikit-learn = "^1.6.1"

[tool.poetry.group.example]
optional = true


[tool.poetry.group.example.dependencies]
matplotlib = "^3.10.0"
jax = "^0.5.0"
tyro = "^0.9.13"
mujoco = "^3.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
